--- a/views/index.jade
+++ b/views/index.jade
@@ -6,6 +6,11 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     meta(name='viewport', content='width=800,user-scalable=no')
 body(style='background: url(http://#{host}:8081/) no-repeat; background-size: 100%;', ontouchmove='event.preventDefault();')
+  #command
+    div
+      img(src="#{image}")
+      span  Login as #{username} 
+      a(href='/logout') [LOGOUT]
   #container
     div 
       a#go.button(href='#') ▲
