bg image for login view

--- a/views/login.jade
+++ b/views/login.jade
@@ -5,7 +5,7 @@ html
     script(src='javascripts/site.js')
     link(rel='stylesheet', href='/stylesheets/style.css')
     meta(name='viewport', content='width=800,user-scalable=no')
-body
+body(style='background: url(/images/bg.jpg) no-repeat; background-size: 100%;')
   #container
     h1 Login to Realspace Avatar Machine
     div 
